--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Rikkarth Workshop</title>
-        <link rel="stylesheet" href="/resources/index.css">
+        <link rel="stylesheet" href="/src/index.css">
     </head>
     <body>
         <!-- Banner Section -->
         <main>
             <section class="banner">
                 <h1>Rikkarth's Portfolio</h1>
-                <img id="watermark_me" src="/resources/images/watermark_me.jpeg" alt="watermark_me" height="100px" width="100px">
+                <img id="watermark_me" src="/src/images/watermark_me.jpeg" alt="watermark_me" height="100px" width="100px">
             </section>
            
         <!-- Slider with Projects -->
@@ -21,9 +21,9 @@
             <section class="tech">
                 <technologies>Technologies</technologies>
                 <br>
-                <img id="logo_1" src="resources\images\js_logo.png" alt="js logo" width="5.8%">
-                <img id="logo_2" src="resources\images\css-3-logo.png" alt="css logo" width="5%">
-                <img id="logo_3" src="resources\images\html5-logo.png" alt="hmtl5 logo" width="5%">
+                <img id="logo_1" src="src\images\js_logo.png" alt="js logo" width="5.8%">
+                <img id="logo_2" src="src\images\css-3-logo.png" alt="css logo" width="5%">
+                <img id="logo_3" src="src\images\html5-logo.png" alt="hmtl5 logo" width="5%">
             </section>
         </main> 
         <!-- Work in Progress -->
