fixed pathing issues with images and index.css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Rikkarth Workshop</title>
-        <link rel="stylesheet" href="/src/index.css">
+        <link rel="stylesheet" href="src\index.css"> 
     </head>
     <body>
         <!-- Banner Section -->
         <main>
             <section class="banner">
                 <h1>Rikkarth's Portfolio</h1>
-                <img id="watermark_me" src="/src/images/watermark_me.jpeg" alt="watermark_me" height="100px" width="100px">
+                <img id="watermark_me" src="src\images\watermark_me.jpeg" alt="watermark_me" height="100px" width="100px">
             </section>
            
         <!-- Slider with Projects -->
