--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <slider></slider>
         <!-- Technologies Learned -->
             <section class="tech">
-                <technologies>Technologies</technologies>
+                <technologies>Technologies Test</technologies>
                 <br>
                 <img id="logo_1" src="src\images\js_logo.png" alt="js logo" width="5.8%">
                 <img id="logo_2" src="src\images\css-3-logo.png" alt="css logo" width="5%">
