used prettier on code

--- a/index.html
+++ b/index.html
@@ -1,37 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rikkarth Workshop</title>
     <link rel="stylesheet" href="src\index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
-</head>
-<body>
-    <img id="mindblown" src="/src/content/blowmind.gif" alt="">
-    <audio id="tomcardy" src="src\content\Artificial Intelligence (Official Video).mp3" controls></audio>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <img id="mindblown" src="/src/content/blowmind.gif" alt="" />
+    <audio
+      id="tomcardy"
+      src="src\content\Artificial Intelligence (Official Video).mp3"
+      controls
+    ></audio>
     <!-- Banner Section -->
     <main>
-        <section class="banner">
-            <h1>Rikkarth's Playground</h1>
-            <h3>Where I test my magic</h3>
-            <img id="watermark_me" src="src\content\watermark_me.jpeg" alt="watermark_me" height="100px" width="100px" />
-        </section>
-        <!-- Slider with Projects -->
-        <slider></slider>
-        <!-- Technologies Learned -->
-        <section class="tech">
-            <h2>Technologies</h2>
-            <img id="logo_1" src="src\content\js_logo.png" alt="js logo" width="5.8%" />
-            <img id="logo_2" src="src\content\css-3-logo.png" alt="css logo" width="5%" />
-            <img id="logo_3" src="src\content\html5-logo.png" alt="hmtl5 logo" width="5%" />
-        </section>
+      <section class="banner">
+        <h1>Rikkarth's Playground</h1>
+        <h3>Where I test my magic</h3>
+        <img
+          id="watermark_me"
+          src="src\content\watermark_me.jpeg"
+          alt="watermark_me"
+          height="100px"
+          width="100px"
+        />
+      </section>
+      <!-- Slider with Projects -->
+      <slider></slider>
+      <!-- Technologies Learned -->
+      <section class="tech">
+        <h2>Technologies</h2>
+        <img
+          id="logo_1"
+          src="src\content\js_logo.png"
+          alt="js logo"
+          width="5.8%"
+        />
+        <img
+          id="logo_2"
+          src="src\content\css-3-logo.png"
+          alt="css logo"
+          width="5%"
+        />
+        <img
+          id="logo_3"
+          src="src\content\html5-logo.png"
+          alt="hmtl5 logo"
+          width="5%"
+        />
+      </section>
     </main>
     <!-- Work in Progress -->
-</body>
-<footer>
-     <a id="linkedin" href="https://www.linkedin.com/in/ricardominamendes/">Contact: LinkedIn @ricardominamendes</a></footer>
+  </body>
+  <footer>
+    <a id="linkedin" href="https://www.linkedin.com/in/ricardominamendes/"
+      >Contact: LinkedIn @ricardominamendes</a
+    >
+  </footer>
 </html>
