--- a/index.html
+++ b/index.html
@@ -14,16 +14,10 @@
     />
   </head>
   <body>
-    <img id="mindblown" src="/src/content/blowmind.gif" alt="" />
-    <audio
-      id="tomcardy"
-      src="src\content\Artificial Intelligence (Official Video).mp3"
-      controls
-    ></audio>
     <!-- Banner Section -->
     <main>
       <section class="banner">
-        <h1>Rikkarth's Playground</h1>
+        <h1>Rikkarth's Workshop</h1>
         <h3>Where I test my magic</h3>
         <img
           id="watermark_me"
@@ -62,7 +56,7 @@
   </body>
   <footer>
     <a id="linkedin" href="https://www.linkedin.com/in/ricardominamendes/"
-      >Contact: LinkedIn@ricardominamendes</a
+      >LinkedIn@ricardominamendes</a
     >
   </footer>
 </html>
