--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
           width="100px"
         />
       </section>
+      <!-- RoadMap -->
+      <div class="roadmap">
+        <h3>Roadmap</h3>
+        <h4>Short-Term</h4>
+        <ul>         
+            <li>Introduce more functionality via JS;</li>
+            <li>Add Game made with Phaser;</li>
+            <li>Add a Slider to navigate through different projects;</li>
+        </ul>
+        <h4>Long-Term</h4>
+        <ul>
+            <li>Nav Bar</li>
+            <li>Login Screen</li>
+        </ul>
+      </p>
       <!-- Slider with Projects -->
       <slider></slider>
       <!-- Technologies Learned -->
