Added padding to several elements; Beutified several elements; Changes tech old logos for new font ones.

--- a/index.html
+++ b/index.html
@@ -12,59 +12,46 @@
       href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/96456ef9a2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- Banner Section -->
     <main>
       <section class="banner">
         <h1>Rikkarth's Workshop</h1>
-        <h3>Where I test my magic</h3>
         <img
           id="watermark_me"
           src="src\content\watermark_me.jpeg"
           alt="watermark_me"
-          height="125px"
-          width="125px"
         />
       </section>
       <!-- RoadMap -->
       <div class="roadmap">
         <h3>Roadmap</h3>
         <h4>Short-Term</h4>
-        <ul>         
-            <li>Introduce more functionality via JS;</li>
-            <li>Add Game made with Phaser;</li>
-            <li>Add a Slider to navigate through different projects;</li>
-        </ul>
+        <p>
+          Introduce more functionality via JS;<br />
+          Add Game made with Phaser;<br />
+          Add a Slider to navigate through different projects;<br />
+        </p>
+
         <h4>Long-Term</h4>
-        <ul>
-            <li>Nav Bar</li>
-            <li>Login Screen</li>
-        </ul>
-      </p>
+        <p>
+          Nav Bar<br />
+          Login Screen
+        </p>
+      </div>
       <!-- Slider with Projects -->
       <slider></slider>
       <!-- Technologies Learned -->
       <section class="tech">
         <h2>Technologies</h2>
-        <img
-          id="logo_1"
-          src="src\content\js_logo.png"
-          alt="js logo"
-          width="5.8%"
-        />
-        <img
-          id="logo_2"
-          src="src\content\css-3-logo.png"
-          alt="css logo"
-          width="5%"
-        />
-        <img
-          id="logo_3"
-          src="src\content\html5-logo.png"
-          alt="hmtl5 logo"
-          width="5%"
-        />
+        <i id="logo_1" class="fa-brands fa-js"></i>
+        <i id="logo_2" class="fa-brands fa-css3"></i>
+        <i id="logo_3" class="fa-brands fa-html5"></i>
       </section>
     </main>
     <!-- Work in Progress -->
