Adjusted background Y axis, added pseudo class to linkedin

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- Work in Progress -->
   </body>
   <footer>
-    <a id="linkedin" href="https://www.linkedin.com/in/ricardominamendes/"
+    <a id="linkedin" href="https://www.linkedin.com/in/ricardominamendes/" title="Visit me on LinkedIn"
       >LinkedIn@ricardominamendes</a
     >
   </footer>
