Added Interactivity, Added Kanban Table, UI Improvements

--- a/index.html
+++ b/index.html
@@ -31,18 +31,28 @@
       <!-- RoadMap -->
       <div class="roadmap">
         <h3>Roadmap</h3>
-        <h4>Short-Term</h4>
-        <p>
-          Introduce more functionality via JS;<br />
-          Add Game made with Phaser;<br />
-          Add a Slider to navigate through different projects;<br />
-        </p>
-
-        <h4>Long-Term</h4>
-        <p>
-          Nav Bar<br />
-          Login Screen
-        </p>
+        <table class="kanban_table">
+          <tr class="kanban_info_markers">
+            <th id="to-do">To Do</th>
+            <th id="progress">In Progress</th>
+            <th id="done">Done</th>
+          </tr>
+          <tr class="kanban_ongoing_markers">
+            <td>Game with Phaser</td>
+            <td>Refine Interactivity</td>
+            <td>Deploy Website</td>
+          </tr>
+          <tr class="kanban_ongoing_markers">
+            <td>Setup common PC resolutions</td>
+            <td></td>
+            <td>v1 Layout</td>
+          </tr>
+          <tr class="kanban_ongoing_markers">
+            <td></td>
+            <td></td>
+            <td>Kanban Table</td>
+          </tr>
+        </table>
       </div>
       <!-- Slider with Projects -->
       <slider></slider>
@@ -57,7 +67,10 @@
     <!-- Work in Progress -->
   </body>
   <footer>
-    <a id="linkedin" href="https://www.linkedin.com/in/ricardominamendes/" title="Visit me on LinkedIn"
+    <a
+      id="linkedin"
+      href="https://www.linkedin.com/in/ricardominamendes/"
+      title="Visit me on LinkedIn"
       >LinkedIn@ricardominamendes</a
     >
   </footer>
