Few tweaks on UI

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
           </tr>
           <tr class="kanban_ongoing_markers">
             <td>Game with Phaser</td>
-            <td>Refine Interactivity</td>
+            <td>Add Interactivity</td>
             <td>Deploy Website</td>
           </tr>
           <tr class="kanban_ongoing_markers">
             <td>Setup common PC resolutions</td>
             <td></td>
-            <td>v1 Layout</td>
+            <td>Layout v1.0</td>
           </tr>
           <tr class="kanban_ongoing_markers">
             <td></td>
@@ -63,15 +63,16 @@
         <i id="logo_2" class="fa-brands fa-css3"></i>
         <i id="logo_3" class="fa-brands fa-html5"></i>
       </section>
+      <footer>
+        <a
+          id="linkedin"
+          href="https://www.linkedin.com/in/ricardominamendes/"
+          title="Visit me on LinkedIn"
+          >LinkedIn@ricardominamendes</a
+        >
+      </footer>
     </main>
-    <!-- Work in Progress -->
+
   </body>
-  <footer>
-    <a
-      id="linkedin"
-      href="https://www.linkedin.com/in/ricardominamendes/"
-      title="Visit me on LinkedIn"
-      >LinkedIn@ricardominamendes</a
-    >
-  </footer>
+
 </html>
