added new to do

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <td>Layout v1.0</td>
           </tr>
           <tr class="kanban_ongoing_markers">
-            <td></td>
+            <td>Implement CSS3 Grid</td>
             <td></td>
             <td>Kanban Table</td>
           </tr>
