--- a/dev_index.html
+++ b/dev_index.html
@@ -8,13 +8,25 @@
     <title>Document</title>
   </head>
   <body>
+    <video autoplay muted loop id="wallpapervideo">
+      <source src="./src/content/nebula.mp4" type=""video/mp4>
+    </video>
     <div class="container">
-      <div class="box_1">
-        <nav id="box-1-nav">
-          <div>Home</div>
-          <a href="info.html">Info</a>
-        </nav>
-      </div>
+      <header>
+        <h1>Header</h1>
+      </header>
+      <nav class="wasd">
+        <h1>Nav</h1>
+      </nav>
+      <section class="left">
+        <h2>Left</h2>
+      </section>
+      <section class="right">
+        <h2>Right</h2>
+      </section>
+      <footer>
+        <h1>Footer</h1>
+      </footer>
     </div>
   </body>
 </html>
