footer updated on dev index

--- a/info.html
+++ b/info.html
@@ -31,7 +31,24 @@
       <!-- RoadMap -->
       <div class="roadmap">
         <h3>Roadmap</h3>
-        <table class="kanban_table" id="flextable">
+        <div class="table_markers">
+          <div id="to-do">To Do</div>
+          <div id="In Progress">In Progress</div>
+          <div id="Done">Done</div>
+        </div>
+        <div class="table_content">
+          <div id="content_box_1"></div>
+          <div id="content_box_1"></div>
+          <div id="content_box_1"></div>
+          <div id="content_box_1"></div>
+          <div id="content_box_1"></div>
+          <div id="content_box_1"></div>
+          <div id="content_box_1"></div>
+          <div id="content_box_1"></div>
+          <div id="content_box_1"></div>
+          <div id="content_box_1"></div>
+        </div>
+        <!-- <table class="kanban_table" id="flextable">
           <tr class="kanban_info_markers">
             <th id="to-do">To Do</th>
             <th id="progress">In Progress</th>
@@ -52,7 +69,7 @@
             <td></td>
             <td>Kanban Table</td>
           </tr>
-        </table>
+        </table> -->
       </div>
       <!-- Slider with Projects -->
       <slider></slider>
