--- a/dev_index.html
+++ b/dev_index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/dev_index_styles.css" />
     <title>Document</title>
+    <script
+      src="https://kit.fontawesome.com/96456ef9a2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <video autoplay muted loop id="wallpapervideo">
-      <source src="./src/content/nebula.mp4" type=""video/mp4>
+      <source src="./src/content/nebula.mp4" type="video/mp4">
     </video>
+    <!-- Main Container -->
+    <main>
     <div class="container">
       <header>
         <h1>Header</h1>
@@ -25,8 +31,23 @@
         <h2>Right</h2>
       </section>
       <footer>
-        <h1>Footer</h1>
+        <div class="tech">
+          <h2>Technologies</h2>
+          <i id="logo_1" class="fa-brands fa-js"></i>
+          <i id="logo_2" class="fa-brands fa-css3"></i>
+          <i id="logo_3" class="fa-brands fa-html5"></i>
+          
+        </div>
+        <div class="linkedin">
+          <a
+          id="linkedin"
+          href="https://www.linkedin.com/in/ricardominamendes/"
+          title="Visit me on LinkedIn"
+          >LinkedIn@ricardominamendes</a
+        ></div>
+        
       </footer>
     </div>
+  </main>
   </body>
 </html>
