--- a/dev_index.html
+++ b/dev_index.html
@@ -13,41 +13,41 @@
   </head>
   <body>
     <video autoplay muted loop id="wallpapervideo">
-      <source src="./src/content/nebula.mp4" type="video/mp4">
+      <source src="./src/content/nebula.mp4" type="video/mp4" />
     </video>
     <!-- Main Container -->
     <main>
-    <div class="container">
-      <header>
-        <h1>Header</h1>
-      </header>
-      <nav class="wasd">
-        <h1>Nav</h1>
-      </nav>
-      <section class="left">
-        <h2>Left</h2>
-      </section>
-      <section class="right">
-        <h2>Right</h2>
-      </section>
-      <footer>
-        <div class="tech">
-          <h2>Technologies</h2>
-          <i id="logo_1" class="fa-brands fa-js"></i>
-          <i id="logo_2" class="fa-brands fa-css3"></i>
-          <i id="logo_3" class="fa-brands fa-html5"></i>
-          
-        </div>
-        <div class="linkedin">
-          <a
-          id="linkedin"
-          href="https://www.linkedin.com/in/ricardominamendes/"
-          title="Visit me on LinkedIn"
-          >LinkedIn@ricardominamendes</a
-        ></div>
-        
-      </footer>
-    </div>
-  </main>
+      <div class="container">
+        <header>
+          <h1>Header</h1>
+        </header>
+        <nav class="nav">
+          <h1>Nav</h1>
+        </nav>
+        <section class="left">
+          <h2>Left</h2>
+        </section>
+        <section class="right">
+          <h2>Right</h2>
+        </section>
+        <footer>
+          <div class="tech">
+            <h2>Technologies</h2>
+            <i class="logo-1 fa-brands fa-js"></i>
+            <i class="logo-2 fa-brands fa-html5"></i>
+            <i class="logo-3 fa-brands fa-css3"></i>
+          </div>
+          <div class="social-media">
+            <h2>Social Media</h2>
+            <a
+              class="linkedin"
+              href="https://www.linkedin.com/in/ricardominamendes/"
+              title="Visit me on LinkedIn"
+              ><i class="fa-brands fa-linkedin"></i></a
+            >
+          </div>
+        </footer>
+      </div>
+    </main>
   </body>
 </html>
