more updates to footer

--- a/dev_index.html
+++ b/dev_index.html
@@ -19,16 +19,16 @@
     <main>
       <div class="container">
         <header>
-          <h1>Header</h1>
+          <h1></h1>
         </header>
         <nav class="nav">
-          <h1>Nav</h1>
+          <h1></h1>
         </nav>
         <section class="left">
-          <h2>Left</h2>
+          <h2></h2>
         </section>
         <section class="right">
-          <h2>Right</h2>
+          <h2></h2>
         </section>
         <footer>
           <div class="tech">
@@ -43,8 +43,8 @@
               class="linkedin"
               href="https://www.linkedin.com/in/ricardominamendes/"
               title="Visit me on LinkedIn"
-              ><i class="fa-brands fa-linkedin"></i></a
-            >
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
           </div>
         </footer>
       </div>
