--- a/dev_index.html
+++ b/dev_index.html
@@ -25,9 +25,21 @@
           <h1></h1>
         </nav>
         <section class="left">
+          <a href="https://github.com/rikkarth">
+            <img
+              title="Check my GitHub"
+              id="github"
+              src="src\content\github2.png"
+              alt="github"
+          /></a>
           <h2></h2>
         </section>
         <section class="right">
+          <img
+            id="watermark_me"
+            src="src\content\watermark_me.jpeg"
+            alt="watermark_me"
+          />
           <h2></h2>
         </section>
         <footer>
