node modules installed, npm installed, tailwind

--- a/dev_index.html
+++ b/dev_index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/dev_index_styles.css" />
+    <link rel="stylesheet" href="./src/development-index.css" />
+    <link href="/dist/output.css" rel="stylesheet">
     <title>Document</title>
     <script
       src="https://kit.fontawesome.com/96456ef9a2.js"
@@ -25,13 +26,13 @@
           <h1></h1>
         </nav>
         <section class="left">
-          <a href="https://github.com/rikkarth">
+          <!-- <a href="https://github.com/rikkarth">
             <img
               title="Check my GitHub"
               id="github"
               src="src\content\github2.png"
               alt="github"
-          /></a>
+          /></a> -->
           <h2></h2>
         </section>
         <section class="right">
