update file tree

--- a/dev_index.html
+++ b/dev_index.html
@@ -25,13 +25,13 @@
           <h1></h1>
         </nav>
         <section class="left">
-          <a href="https://github.com/rikkarth">
+          <!-- <a href="https://github.com/rikkarth">
             <img
               title="Check my GitHub"
               id="github"
               src="src\content\github2.png"
               alt="github"
-          /></a>
+          /></a> -->
           <h2></h2>
         </section>
         <section class="right">
