lots of good changes

--- a/index.html
+++ b/index.html
@@ -5,26 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/development-index.css" />
-    <link href="/dist/output.css" rel="stylesheet">
-    <title>Document</title>
+    <link href="/dist/output.css" rel="stylesheet" />
+    <title>Rikkarth's Portfolio</title>
     <script
       src="https://kit.fontawesome.com/96456ef9a2.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
-    <video autoplay muted loop id="wallpapervideo">
+    <video class="max-w-none" autoplay muted loop id="wallpapervideo">
       <source src="./src/content/nebula.mp4" type="video/mp4" />
     </video>
     <!-- Main Container -->
     <main>
       <div class="container">
         <header>
-          <h1></h1>
+          <img
+            id="watermark_me"
+            src="src\content\watermark_me.jpeg"
+            alt="watermark_me"
+          />
+          <img
+            class="space-invader"
+            src="./src/content/space-invader.png"
+            alt="space invader"
+          />
+          <h1 class="myname">Ricardo Mendes</h1>
         </header>
-        <nav class="nav">
-          <h1></h1>
-        </nav>
         <section class="left">
           <!-- <a href="https://github.com/rikkarth">
             <img
@@ -35,14 +42,7 @@
           /></a> -->
           <h2></h2>
         </section>
-        <section class="right">
-          <img
-            id="watermark_me"
-            src="src\content\watermark_me.jpeg"
-            alt="watermark_me"
-          />
-          <h2></h2>
-        </section>
+        <section class="right"></section>
         <footer>
           <div class="tech">
             <h2>Technologies</h2>
