added responsivness, added content to class right

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/styles.css" />
-    <link href="/dist/output.css" rel="stylesheet" />
     <title>Rikkarth's Portfolio</title>
     <script
       src="https://kit.fontawesome.com/96456ef9a2.js"
@@ -13,7 +12,7 @@
     ></script>
   </head>
   <body>
-    <video class="max-w-none" autoplay muted loop id="wallpapervideo">
+    <video autoplay muted loop id="wallpapervideo">
       <source src="./src/content/nebula.mp4" type="video/mp4" />
     </video>
     <!-- Main Container -->
@@ -40,9 +39,20 @@
               src="src\content\github2.png"
               alt="github"
           /></a> -->
-          <h2></h2>
         </section>
-        <section class="right"></section>
+        <section class="right">
+          <h2>About Me</h2>
+          <p>
+            Ambitious, success-driven, researcher in nature, with a can-do
+            mentality. I love challenging goals. A critical thinker who loves
+            teamwork above else.
+          </p>
+          <p>
+            I've worked with Tech all my life, studied Electronics, Automation
+            and Comand, and always had a burning passion for developing and
+            building things.
+          </p>
+        </section>
         <footer>
           <div class="tech">
             <h2>Technologies</h2>
