font style change, added home

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             alt="space invader"
           />
           <h1 class="myname">Ricardo Mendes</h1>
+          <h2 class="home">Home</h2>
         </header>
         <section class="left">
           <!-- <a href="https://github.com/rikkarth">
