--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </a>
         </section>
         <section class="right">
-          <h2>About Me</h2>
+          <!-- <h2>About Me</h2> -->
           <p>
             Ambitious, success-driven, researcher in nature, with a can-do
             mentality. I love challenging goals. A critical thinker who loves
