added google analytics

--- a/index.html
+++ b/index.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- compatibilities -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- title and description -->
+    <title>
+      Rikkarth's Portfolio
+    </title>
+    <meta 
+      name="description"
+      content="Ricardo Mendes Portfolio Website" />
+    <meta 
+      property="og:title"
+      content="Rikkarth's Portfolio"
+      />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://i.imgur.com/3yy0adt.png"
+    />
+
     <link rel="stylesheet" href="./src/styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Play:400,700"
       rel="stylesheet"
       type="text/css"
     />
-    <title>Rikkarth's Portfolio</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XJHM75EJSB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XJHM75EJSB');
+</script>
+
     <script
       src="https://kit.fontawesome.com/96456ef9a2.js"
       crossorigin="anonymous"
