--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="Rikkarth's Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://i.imgur.com/3yy0adt.png" />
+    <meta property="og:url" content="https://rikkarth.github.io/rikkarth_workshop/" />
 
     <link rel="stylesheet" href="./src/styles.css" />
     <link
