--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- title and description -->
+    <!-- meta -->
     <title>Rikkarth's Portfolio</title>
     <meta property="description" content="Ricardo Mendes Portfolio Website" />
     <meta property="og:title" content="Rikkarth's Portfolio" />
@@ -34,12 +34,13 @@
 
       gtag("config", "G-XJHM75EJSB");
     </script>
-
+    <!-- FontAwesome Script -->
     <script
       src="https://kit.fontawesome.com/96456ef9a2.js"
       crossorigin="anonymous"
     ></script>
   </head>
+  <!-- WEBSITE START -->
   <body class=".body">
     <div class="wrap">
       <video autoplay muted loop class="video-1">
