--- a/index.html
+++ b/index.html
@@ -12,7 +12,35 @@
     <meta property="og:title" content="Rikkarth's Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://i.imgur.com/3yy0adt.png" />
-    <meta property="og:url" content="https://rikkarth.github.io/rikkarth_workshop/" />
+    <meta
+      property="og:url"
+      content="https://rikkarth.github.io/rikkarth_workshop/"
+    />
+
+    <!-- HTML Meta Tags -->
+    <title>Rikkarth's Portfolio</title>
+    <meta name="description" content="undefined" />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://rikkarth.github.io/rikkarth_workshop/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Rikkarth's Portfolio" />
+    <meta property="og:description" content="undefined" />
+    <meta property="og:image" content="https://i.imgur.com/3yy0adt.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="rikkarth.github.io" />
+    <meta
+      property="twitter:url"
+      content="https://rikkarth.github.io/rikkarth_workshop/"
+    />
+    <meta name="twitter:title" content="Rikkarth's Portfolio" />
+    <meta name="twitter:description" content="undefined" />
+    <meta name="twitter:image" content="https://i.imgur.com/3yy0adt.png" />
 
     <link rel="stylesheet" href="./src/styles.css" />
     <link
