--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="description" content="Ricardo Mendes Portfolio Website" />
     <meta property="og:title" content="Rikkarth's Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://i.imgur.com/3yy0adt.png" />
+    <meta property="og:image" https://i.imgur.com/nvxJYFJ.png />
     <meta
       property="og:url"
       content="https://rikkarth.github.io/rikkarth_workshop/"
@@ -19,7 +19,7 @@
 
     <!-- HTML Meta Tags -->
     <title>Rikkarth's Portfolio</title>
-    <meta name="description" content="undefined" />
+    <meta name="description" content="Ricardo Mendes Portfolio Website" />
 
     <!-- Facebook Meta Tags -->
     <meta
@@ -28,8 +28,8 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Rikkarth's Portfolio" />
-    <meta property="og:description" content="undefined" />
-    <meta property="og:image" content="https://i.imgur.com/3yy0adt.png" />
+    <meta property="og:description" content="Ricardo Mendes Portfolio Website" />
+    <meta property="og:image" content="https://i.imgur.com/nvxJYFJ.png" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -39,8 +39,8 @@
       content="https://rikkarth.github.io/rikkarth_workshop/"
     />
     <meta name="twitter:title" content="Rikkarth's Portfolio" />
-    <meta name="twitter:description" content="undefined" />
-    <meta name="twitter:image" content="https://i.imgur.com/3yy0adt.png" />
+    <meta name="twitter:description" content="Ricardo Mendes Portfolio Website" />
+    <meta name="twitter:image" https://i.imgur.com/nvxJYFJ.png />
 
     <link rel="stylesheet" href="./src/styles.css" />
     <link
