changed word workshop to portfolio

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" https://i.imgur.com/nvxJYFJ.png />
     <meta
       property="og:url"
-      content="https://rikkarth.github.io/rikkarth_workshop/"
+      content="https://rikkarth.github.io/rikkarth_portfolio/"
     />
 
     <!-- HTML Meta Tags -->
@@ -24,7 +24,7 @@
     <!-- Facebook Meta Tags -->
     <meta
       property="og:url"
-      content="https://rikkarth.github.io/rikkarth_workshop/"
+      content="https://rikkarth.github.io/rikkarth_portfolio/"
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Rikkarth's Portfolio" />
@@ -36,7 +36,7 @@
     <meta property="twitter:domain" content="rikkarth.github.io" />
     <meta
       property="twitter:url"
-      content="https://rikkarth.github.io/rikkarth_workshop/"
+      content="https://rikkarth.github.io/rikkarth_portfolio/"
     />
     <meta name="twitter:title" content="Rikkarth's Portfolio" />
     <meta name="twitter:description" content="Ricardo Mendes Portfolio Website" />
