--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <video autoplay muted loop class="video-2">
         <source src="./src/content/NEBULAE.mp4" type="video/mp4" />
       </video>
+      
     </div>
     <!-- Main Container -->
     <main class="main">
@@ -93,6 +94,12 @@
             alt="space invader"
           />
           <h1 class="myname">Ricardo Mendes</h1>
+          <div class="scroll-downs">
+            <div class="mousey">
+              <div class="scroller"></div>
+            </div>
+          </div>
+
           <!-- <h2 class="home">Home</h2> -->
         </header>
         <section class="left">
