--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Rikkarth's Portfolio" />
-    <meta property="og:description" content="Ricardo Mendes Portfolio Website" />
+    <meta
+      property="og:description"
+      content="Ricardo Mendes Portfolio Website"
+    />
     <meta property="og:image" content="https://i.imgur.com/nvxJYFJ.png" />
 
     <!-- Twitter Meta Tags -->
@@ -39,7 +42,10 @@
       content="https://rikkarth.github.io/rikkarth_portfolio/"
     />
     <meta name="twitter:title" content="Rikkarth's Portfolio" />
-    <meta name="twitter:description" content="Ricardo Mendes Portfolio Website" />
+    <meta
+      name="twitter:description"
+      content="Ricardo Mendes Portfolio Website"
+    />
     <meta name="twitter:image" https://i.imgur.com/nvxJYFJ.png />
 
     <link rel="stylesheet" href="./src/styles.css" />
@@ -77,7 +83,6 @@
       <video autoplay muted loop class="video-2">
         <source src="./src/content/NEBULAE.mp4" type="video/mp4" />
       </video>
-      
     </div>
     <!-- Main Container -->
     <main class="main">
